--- a/1 - Workbook - Exploratory Analysis.ipynb
+++ b/1 - Workbook - Exploratory Analysis.ipynb
@@ -27,10 +27,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import required libraries\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_columns', 100)\n",
+    "\n",
+    "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import seaborn as sns\n",
+    "sns.set_style('darkgrid')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1883, 26)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load real estate data\n",
+    "df = pd.read_csv('real_estate_data.csv')\n",
+    "\n",
+    "#view the shape of the data\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tx_price                int64\n",
+       "beds                    int64\n",
+       "baths                   int64\n",
+       "sqft                    int64\n",
+       "year_built              int64\n",
+       "lot_size                int64\n",
+       "property_type          object\n",
+       "exterior_walls         object\n",
+       "roof                   object\n",
+       "basement              float64\n",
+       "restaurants             int64\n",
+       "groceries               int64\n",
+       "nightlife               int64\n",
+       "cafes                   int64\n",
+       "shopping                int64\n",
+       "arts_entertainment      int64\n",
+       "beauty_spas             int64\n",
+       "active_life             int64\n",
+       "median_age            float64\n",
+       "married               float64\n",
+       "college_grad          float64\n",
+       "property_tax          float64\n",
+       "insurance             float64\n",
+       "median_school         float64\n",
+       "num_schools           float64\n",
+       "tx_year                 int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# view the data types of the features\n",
+    "\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check types of df.types\n",
+    "type(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tx_price</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>baths</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>exterior_walls</th>\n",
+       "      <th>roof</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>restaurants</th>\n",
+       "      <th>groceries</th>\n",
+       "      <th>nightlife</th>\n",
+       "      <th>cafes</th>\n",
+       "      <th>shopping</th>\n",
+       "      <th>arts_entertainment</th>\n",
+       "      <th>beauty_spas</th>\n",
+       "      <th>active_life</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>married</th>\n",
+       "      <th>college_grad</th>\n",
+       "      <th>property_tax</th>\n",
+       "      <th>insurance</th>\n",
+       "      <th>median_school</th>\n",
+       "      <th>num_schools</th>\n",
+       "      <th>tx_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295850</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>584</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>107</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>89</td>\n",
+       "      <td>6</td>\n",
+       "      <td>47</td>\n",
+       "      <td>58</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>612</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>Composition Shingle</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>14</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>279900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>615</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>183</td>\n",
+       "      <td>13</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>101</td>\n",
+       "      <td>10</td>\n",
+       "      <td>74</td>\n",
+       "      <td>62</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>379900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>618</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33541</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>198</td>\n",
+       "      <td>9</td>\n",
+       "      <td>38</td>\n",
+       "      <td>25</td>\n",
+       "      <td>127</td>\n",
+       "      <td>11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>83</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>340000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>149</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>83</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>73</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tx_price  beds  baths  sqft  year_built  lot_size  \\\n",
+       "0    295850     1      1   584        2013         0   \n",
+       "1    216500     1      1   612        1965         0   \n",
+       "2    279900     1      1   615        1963         0   \n",
+       "3    379900     1      1   618        2000     33541   \n",
+       "4    340000     1      1   634        1992         0   \n",
+       "\n",
+       "                   property_type exterior_walls                 roof  \\\n",
+       "0  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "1  Apartment / Condo / Townhouse          Brick  Composition Shingle   \n",
+       "2  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "3  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "4  Apartment / Condo / Townhouse          Brick                  NaN   \n",
+       "\n",
+       "   basement  restaurants  groceries  nightlife  cafes  shopping  \\\n",
+       "0       NaN          107          9         30     19        89   \n",
+       "1       1.0          105         15          6     13        87   \n",
+       "2       NaN          183         13         31     30       101   \n",
+       "3       NaN          198          9         38     25       127   \n",
+       "4       NaN          149          7         22     20        83   \n",
+       "\n",
+       "   arts_entertainment  beauty_spas  active_life  median_age  married  \\\n",
+       "0                   6           47           58        33.0     65.0   \n",
+       "1                   2           26           14        39.0     73.0   \n",
+       "2                  10           74           62        28.0     15.0   \n",
+       "3                  11           72           83        36.0     25.0   \n",
+       "4                  10           50           73        37.0     20.0   \n",
+       "\n",
+       "   college_grad  property_tax  insurance  median_school  num_schools  tx_year  \n",
+       "0          84.0         234.0       81.0            9.0          3.0     2013  \n",
+       "1          69.0         169.0       51.0            3.0          3.0     2006  \n",
+       "2          86.0         216.0       74.0            8.0          3.0     2012  \n",
+       "3          91.0         265.0       92.0            9.0          3.0     2005  \n",
+       "4          75.0          88.0       30.0            9.0          3.0     2002  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# display first five observations\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -883,7 +1240,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -897,7 +1254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
