--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -45,10 +45,424 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tx_price</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>baths</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>year_built</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>exterior_walls</th>\n",
+       "      <th>roof</th>\n",
+       "      <th>basement</th>\n",
+       "      <th>restaurants</th>\n",
+       "      <th>groceries</th>\n",
+       "      <th>nightlife</th>\n",
+       "      <th>cafes</th>\n",
+       "      <th>shopping</th>\n",
+       "      <th>arts_entertainment</th>\n",
+       "      <th>beauty_spas</th>\n",
+       "      <th>active_life</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>married</th>\n",
+       "      <th>college_grad</th>\n",
+       "      <th>property_tax</th>\n",
+       "      <th>insurance</th>\n",
+       "      <th>median_school</th>\n",
+       "      <th>num_schools</th>\n",
+       "      <th>tx_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295850</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>584</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>107</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>89</td>\n",
+       "      <td>6</td>\n",
+       "      <td>47</td>\n",
+       "      <td>58</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>234.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>216500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>612</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>Composition Shingle</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2</td>\n",
+       "      <td>26</td>\n",
+       "      <td>14</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>279900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>615</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>183</td>\n",
+       "      <td>13</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>101</td>\n",
+       "      <td>10</td>\n",
+       "      <td>74</td>\n",
+       "      <td>62</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>216.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>379900</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>618</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33541</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>198</td>\n",
+       "      <td>9</td>\n",
+       "      <td>38</td>\n",
+       "      <td>25</td>\n",
+       "      <td>127</td>\n",
+       "      <td>11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>83</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>340000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>634</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>149</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "      <td>20</td>\n",
+       "      <td>83</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>73</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>265000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>641</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>146</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>27</td>\n",
+       "      <td>86</td>\n",
+       "      <td>9</td>\n",
+       "      <td>60</td>\n",
+       "      <td>52</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>240000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>642</td>\n",
+       "      <td>1944</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Single-Family</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>159</td>\n",
+       "      <td>13</td>\n",
+       "      <td>36</td>\n",
+       "      <td>17</td>\n",
+       "      <td>92</td>\n",
+       "      <td>12</td>\n",
+       "      <td>66</td>\n",
+       "      <td>50</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>388100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>650</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>33541</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Wood Siding</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>198</td>\n",
+       "      <td>9</td>\n",
+       "      <td>38</td>\n",
+       "      <td>25</td>\n",
+       "      <td>127</td>\n",
+       "      <td>11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>83</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>266.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>240000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>660</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>51</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>40</td>\n",
+       "      <td>18</td>\n",
+       "      <td>32</td>\n",
+       "      <td>41</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>250000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>664</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Apartment / Condo / Townhouse</td>\n",
+       "      <td>Brick</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>119</td>\n",
+       "      <td>10</td>\n",
+       "      <td>26</td>\n",
+       "      <td>25</td>\n",
+       "      <td>183</td>\n",
+       "      <td>13</td>\n",
+       "      <td>70</td>\n",
+       "      <td>36</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2007</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tx_price  beds  baths  sqft  year_built  lot_size  \\\n",
+       "0    295850     1      1   584        2013         0   \n",
+       "1    216500     1      1   612        1965         0   \n",
+       "2    279900     1      1   615        1963         0   \n",
+       "3    379900     1      1   618        2000     33541   \n",
+       "4    340000     1      1   634        1992         0   \n",
+       "5    265000     1      1   641        1947         0   \n",
+       "6    240000     1      1   642        1944         0   \n",
+       "7    388100     1      1   650        2000     33541   \n",
+       "8    240000     1      1   660        1983         0   \n",
+       "9    250000     1      1   664        1965         0   \n",
+       "\n",
+       "                   property_type exterior_walls                 roof  \\\n",
+       "0  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "1  Apartment / Condo / Townhouse          Brick  Composition Shingle   \n",
+       "2  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "3  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "4  Apartment / Condo / Townhouse          Brick                  NaN   \n",
+       "5  Apartment / Condo / Townhouse          Brick                  NaN   \n",
+       "6                  Single-Family          Brick                  NaN   \n",
+       "7  Apartment / Condo / Townhouse    Wood Siding                  NaN   \n",
+       "8  Apartment / Condo / Townhouse          Brick                  NaN   \n",
+       "9  Apartment / Condo / Townhouse          Brick                  NaN   \n",
+       "\n",
+       "   basement  restaurants  groceries  nightlife  cafes  shopping  \\\n",
+       "0       NaN          107          9         30     19        89   \n",
+       "1       1.0          105         15          6     13        87   \n",
+       "2       NaN          183         13         31     30       101   \n",
+       "3       NaN          198          9         38     25       127   \n",
+       "4       NaN          149          7         22     20        83   \n",
+       "5       NaN          146         10         23     27        86   \n",
+       "6       NaN          159         13         36     17        92   \n",
+       "7       NaN          198          9         38     25       127   \n",
+       "8       NaN           51          8          6      2        40   \n",
+       "9       NaN          119         10         26     25       183   \n",
+       "\n",
+       "   arts_entertainment  beauty_spas  active_life  median_age  married  \\\n",
+       "0                   6           47           58        33.0     65.0   \n",
+       "1                   2           26           14        39.0     73.0   \n",
+       "2                  10           74           62        28.0     15.0   \n",
+       "3                  11           72           83        36.0     25.0   \n",
+       "4                  10           50           73        37.0     20.0   \n",
+       "5                   9           60           52        28.0     15.0   \n",
+       "6                  12           66           50        28.0     36.0   \n",
+       "7                  11           72           83        36.0     25.0   \n",
+       "8                  18           32           41        36.0     49.0   \n",
+       "9                  13           70           36        57.0     13.0   \n",
+       "\n",
+       "   college_grad  property_tax  insurance  median_school  num_schools  tx_year  \n",
+       "0          84.0         234.0       81.0            9.0          3.0     2013  \n",
+       "1          69.0         169.0       51.0            3.0          3.0     2006  \n",
+       "2          86.0         216.0       74.0            8.0          3.0     2012  \n",
+       "3          91.0         265.0       92.0            9.0          3.0     2005  \n",
+       "4          75.0          88.0       30.0            9.0          3.0     2002  \n",
+       "5          86.0         168.0       58.0            8.0          3.0     2004  \n",
+       "6          88.0         176.0       61.0            7.0          3.0     2011  \n",
+       "7          91.0         266.0       92.0            9.0          3.0     2005  \n",
+       "8          77.0         188.0       65.0            6.0          3.0     2013  \n",
+       "9          83.0         147.0       51.0            6.0          3.0     2007  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('real_estate_data.csv')\n",
+    "df.head(10)"
+   ]
   },
   {
    "cell_type": "code",
