--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -466,10 +466,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1883, 26)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# drop duplicates\n",
+    "df.shape\n",
+    "\n",
+    "df.drop_duplicates()\n",
+    "print(df.shape)"
+   ]
   },
   {
    "cell_type": "code",
