sav new dataset

--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -714,13 +714,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -729,24 +722,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "property_type       0\n",
+       "exterior_walls    223\n",
+       "roof              354\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's find and count the missing categorical feature\n",
+    "# Display number of missing values by feature (categorical)\n",
+    "\n",
+    "# select a subset of our DataFrame of only our categorical features\n",
+    "selected = df.select_dtypes(include=['object'])\n",
+    "\n",
+    "# Flag all the missing values\n",
+    "check = selected.isnull()\n",
+    "\n",
+    "# take the sum by column\n",
+    "check.sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fill exterior_walls missng values with missing\n",
+    "\n",
+    "df['exterior_walls'].fillna('Missing', inplace=True)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "property_type       0\n",
+       "exterior_walls      0\n",
+       "roof              354\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's check again\n",
+    "\n",
+    "df.select_dtypes(include=['object']).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tx_price              0\n",
+       "beds                  0\n",
+       "baths                 0\n",
+       "sqft                  0\n",
+       "year_built            0\n",
+       "lot_size              0\n",
+       "basement              0\n",
+       "restaurants           0\n",
+       "groceries             0\n",
+       "nightlife             0\n",
+       "cafes                 0\n",
+       "shopping              0\n",
+       "arts_entertainment    0\n",
+       "beauty_spas           0\n",
+       "active_life           0\n",
+       "median_age            0\n",
+       "married               0\n",
+       "college_grad          0\n",
+       "property_tax          0\n",
+       "insurance             0\n",
+       "median_school         0\n",
+       "num_schools           0\n",
+       "tx_year               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's find and count the missing numerical feature\n",
+    "\n",
+    "df.select_dtypes(exclude=['object']).isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like there are no missing values in the numerical feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# lets save the new dataframe\n",
+    "df.to_csv('clean_data')"
+   ]
   },
   {
    "cell_type": "markdown",
