--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -878,10 +878,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1.])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['basement'].unique()"
+   ]
   },
   {
    "cell_type": "markdown",
