write a loop that fills all the missing values for categorical features with the value Missing " "

--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -1570,10 +1570,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for column in df.select_dtypes(include=['object']):\n",
+    "    if df[column].empty or df[column].isnull:\n",
+    "        df[column] = 'Missing'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1584,10 +1588,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "property_type     0\n",
+       "exterior_walls    0\n",
+       "roof              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select_dtypes(include=['object']).isnull().sum()"
+   ]
   },
   {
    "cell_type": "markdown",
