--- a/2 - Workbook - Data Cleaning.ipynb
+++ b/2 - Workbook - Data Cleaning.ipynb
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1637,6 +1637,49 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tx_price              0\n",
+       "beds                  0\n",
+       "baths                 0\n",
+       "sqft                  0\n",
+       "year_built            0\n",
+       "lot_size              1\n",
+       "basement              0\n",
+       "restaurants           0\n",
+       "groceries             0\n",
+       "nightlife             0\n",
+       "cafes                 0\n",
+       "shopping              0\n",
+       "arts_entertainment    0\n",
+       "beauty_spas           0\n",
+       "active_life           0\n",
+       "median_age            0\n",
+       "married               0\n",
+       "college_grad          0\n",
+       "property_tax          0\n",
+       "insurance             0\n",
+       "median_school         0\n",
+       "num_schools           0\n",
+       "tx_year               0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select_dtypes(exclude=['object']).isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1682,10 +1725,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv('cleaned_df.csv', index=None)"
+   ]
   },
   {
    "cell_type": "markdown",
