--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -620,35 +620,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0       1\n",
-       "1       0\n",
-       "2       1\n",
-       "3       0\n",
-       "4       0\n",
-       "       ..\n",
-       "1878    0\n",
-       "1879    0\n",
-       "1880    0\n",
-       "1881    0\n",
-       "1882    0\n",
-       "Name: tx_year, Length: 1883, dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.340945300053107\n"
+     ]
     }
    ],
    "source": [
     "# comparing extraneous factors\n",
     "datah = ((df.tx_year >= 2010) & (df.tx_year <= 2013)).astype(int)\n",
-    "datah"
+    "datah.mean()\n",
+    "\n",
+    "print(datah.mean() * 100)"
    ]
   },
   {
