--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -648,10 +648,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# implementing heuristics: create property_age feature\n",
+    "\n",
+    "df['property_age'] = df.tx_year - df.year_built"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sanity check\n",
+    "\n",
+    "df.property_age.min()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-8 is < 0 so something might be wrong somewhere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print the number of observations with 'property_age' less than 0.\n",
+    "\n",
+    "sum(df.property_age < 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What can be responsible for figure < 0? it's possible that some homeowners bought houses before the construction company built them. \n",
+    "\n",
+    "This is reasonable, especially with single-family homes. However, for our original problem, we are only interested in houses that already exist because our client only buys existing ones.\n",
+    "\n",
+    "In the exercises, we'll do a quick pinch of ad-hoc data cleaning and remove these observations from our dataset."
+   ]
   },
   {
    "cell_type": "code",
