--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -1349,10 +1349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['during_recession'] = ((df.tx_year >= 2010) & (df.tx_year <= 2013)).astype(int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1363,10 +1365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2634094530005311"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['during_recession'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1396,18 +1411,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       True\n",
+      "1       True\n",
+      "2       True\n",
+      "3       True\n",
+      "4       True\n",
+      "        ... \n",
+      "1878    True\n",
+      "1879    True\n",
+      "1880    True\n",
+      "1881    True\n",
+      "1882    True\n",
+      "Name: tx_year, Length: 1883, dtype: bool\n"
+     ]
+    }
+   ],
    "source": [
     "# Set variable a as the earlier indicator variable (combining two masks)\n",
-    "\n",
+    "a = ((df.tx_year >= 2010)&(df.tx_year <= 2013)).astype(int)\n",
     "\n",
     "# Set variable b as the new indicator variable (using \"between\")\n",
     "\n",
-    "\n",
+    "b = df.tx_year.between(2010, 2013).astype(int)\n",
     "# Are a and b equivalent?\n",
-    "\n"
+    "\n",
+    "print(a == b)\n"
    ]
   },
   {
@@ -1421,10 +1456,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['during_recession'] = df.tx_year.between(2010, 2013).astype(int)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1435,10 +1472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2634094530005311"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['during_recession'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
