--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -288,19 +288,19 @@
        "4          75.0          88.0       30.0            9.0          3.0     2002  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('cleaned_df.csv')\n",
-    "df.head()"
+    "dfs = pd.read_csv('cleaned_df.csv')\n",
+    "dfs.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,12 +313,12 @@
     "# convert the resulting series to type int to map from True/False to 1/0\n",
     "# and save it as a feature in the dataframe\n",
     "\n",
-    "df['two_and_two'] = ((df.beds == 2) & (df.baths == 2)).astype(int)\n"
+    "dfs['two_and_two'] = ((dfs.beds == 2) & (dfs.baths == 2)).astype(int)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -570,19 +570,19 @@
        "4            0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# check the data frame to see the result\n",
-    "df.head()"
+    "dfs.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
    "source": [
     "# find the mean of the feature\n",
     "\n",
-    "print(df['two_and_two'].mean())"
+    "print(dfs['two_and_two'].mean())"
    ]
   },
   {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
    ],
    "source": [
     "# comparing extraneous factors\n",
-    "datah = ((df.tx_year >= 2010) & (df.tx_year <= 2013)).astype(int)\n",
+    "datah = ((dfs.tx_year >= 2010) & (dfs.tx_year <= 2013)).astype(int)\n",
     "datah.mean()\n",
     "\n",
     "print(datah.mean() * 100)"
@@ -648,18 +648,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# implementing heuristics: create property_age feature\n",
     "\n",
-    "df['property_age'] = df.tx_year - df.year_built"
+    "dfs['property_age'] = dfs.tx_year - dfs.year_built"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -670,7 +670,7 @@
        "-8"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +678,7 @@
    "source": [
     "# sanity check\n",
     "\n",
-    "df.property_age.min()"
+    "dfs.property_age.min()"
    ]
   },
   {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "19"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
    "source": [
     "# print the number of observations with 'property_age' less than 0.\n",
     "\n",
-    "sum(df.property_age < 0)"
+    "sum(dfs.property_age < 0)"
    ]
   },
   {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
    "source": [
     "# lets investigate Exterior_walls feature for sparse classes\n",
     "\n",
-    "sns.countplot(y='exterior_walls', data=df)\n",
+    "sns.countplot(y='exterior_walls', data=dfs)\n",
     "plt.show()"
    ]
   },
@@ -774,11 +774,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.exterior_walls.replace(['Wood Siding', 'Wood Shingle'], 'Wood', inplace=True)"
+    "dfs.exterior_walls.replace(['Wood Siding', 'Wood Shingle'], 'Wood', inplace=True)"
    ]
   },
   {
@@ -790,18 +790,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "other_exterior = ['Stucco', 'Asbestos shingle', 'Concrete Block', 'Masonry', 'Other']\n",
     "    \n",
-    "df.exterior_walls.replace(['Stucco', 'Asbestos shingle', 'Concrete Block', 'Masonry', 'Other'], 'Other', inplace=True)"
+    "dfs.exterior_walls.replace(['Stucco', 'Asbestos shingle', 'Concrete Block', 'Masonry', 'Other'], 'Other', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
    "source": [
     "# let's view the new distribution\n",
     "\n",
-    "sns.countplot(y='exterior_walls', data=df)\n",
+    "sns.countplot(y='exterior_walls', data=dfs)\n",
     "plt.show()"
    ]
   },
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -853,12 +853,12 @@
    "source": [
     "# print unique classes in exterior_walls\n",
     "\n",
-    "print(df.exterior_walls.unique())"
+    "print(dfs.exterior_walls.unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
        "4                    0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
    "source": [
     "# create dummy variables for exterior walls and display first 5 observations\n",
     "\n",
-    "pd.get_dummies(df, columns=['exterior_walls']).head()\n"
+    "pd.get_dummies(dfs, columns=['exterior_walls']).head()\n"
    ]
   },
   {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1228,13 +1228,13 @@
        "0.09453000531067446"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['two_and_two'].mean()"
+    "dfs['two_and_two'].mean()"
    ]
   },
   {
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1265,13 +1265,13 @@
        "19"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(df['property_age'] < 0)"
+    "sum(dfs['property_age'] < 0)"
    ]
   },
   {
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
     }
    ],
    "source": [
-    "print(df['exterior_walls'].unique())"
+    "print(dfs['exterior_walls'].unique())"
    ]
   },
   {
@@ -1349,11 +1349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['during_recession'] = ((df.tx_year >= 2010) & (df.tx_year <= 2013)).astype(int)"
+    "dfs['during_recession'] = ((dfs.tx_year >= 2010) & (dfs.tx_year <= 2013)).astype(int)"
    ]
   },
   {
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1374,13 +1374,13 @@
        "0.2634094530005311"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['during_recession'].mean()"
+    "dfs['during_recession'].mean()"
    ]
   },
   {
@@ -1411,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1435,11 +1435,11 @@
    ],
    "source": [
     "# Set variable a as the earlier indicator variable (combining two masks)\n",
-    "a = ((df.tx_year >= 2010)&(df.tx_year <= 2013)).astype(int)\n",
+    "a = ((dfs.tx_year >= 2010)&(dfs.tx_year <= 2013)).astype(int)\n",
     "\n",
     "# Set variable b as the new indicator variable (using \"between\")\n",
     "\n",
-    "b = df.tx_year.between(2010, 2013).astype(int)\n",
+    "b = dfs.tx_year.between(2010, 2013).astype(int)\n",
     "# Are a and b equivalent?\n",
     "\n",
     "print(a == b)\n"
@@ -1456,11 +1456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['during_recession'] = df.tx_year.between(2010, 2013).astype(int)"
+    "dfs['during_recession'] = dfs.tx_year.between(2010, 2013).astype(int)"
    ]
   },
   {
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1481,13 +1481,13 @@
        "0.2634094530005311"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['during_recession'].mean()"
+    "dfs['during_recession'].mean()"
    ]
   },
   {
@@ -1518,17 +1518,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1864\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove rows where property_age is less than 0\n",
-    "\n",
+    "dfs = dfs[dfs.property_age >= 0]\n",
     "\n",
     "# Print number of rows in remaining dataframe\n",
-    "\n"
+    "print(len(dfs))\n"
    ]
   },
   {
@@ -1551,10 +1559,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(dfs.property_age < 0)"
+   ]
   },
   {
    "cell_type": "markdown",
