--- a/3 - Workbook - Feature Engineering.ipynb
+++ b/3 - Workbook - Feature Engineering.ipynb
@@ -1608,10 +1608,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "dfs['school_score'] = dfs['num_schools'] * dfs['median_school']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1622,12 +1625,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.0"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs['school_score'].median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1649,10 +1665,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1864.000000\n",
+       "mean       17.982833\n",
+       "std         6.463799\n",
+       "min         3.000000\n",
+       "25%        12.000000\n",
+       "50%        18.000000\n",
+       "75%        24.000000\n",
+       "max        30.000000\n",
+       "Name: school_score, dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs['school_score'].describe()"
+   ]
   },
   {
    "cell_type": "markdown",
