generate noisy sine wave, save as dataframe & inspect head

--- a/4 - Workbook - Regression Algorithms.ipynb
+++ b/4 - Workbook - Regression Algorithms.ipynb
@@ -47,12 +47,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.086260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.063467</td>\n",
+       "      <td>0.881165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.126933</td>\n",
+       "      <td>0.145261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.190400</td>\n",
+       "      <td>-0.252824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.253866</td>\n",
+       "      <td>-0.320448</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          x         y\n",
+       "0  0.000000  0.086260\n",
+       "1  0.063467  0.881165\n",
+       "2  0.126933  0.145261\n",
+       "3  0.190400 -0.252824\n",
+       "4  0.253866 -0.320448"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# generate noisy sine wave dataset\n",
-    "\n"
+    "\n",
+    "# input feature\n",
+    "x = np.linspace(0, 2*np.pi, 100)\n",
+    "\n",
+    "\n",
+    "# noise\n",
+    "np.random.seed(321)\n",
+    "noise = np.random.normal(0, 0.5, 100)\n",
+    "\n",
+    "# target variable\n",
+    "\n",
+    "y = np.sin(x) + noise\n",
+    "\n",
+    "#create dataframe with x and y\n",
+    "\n",
+    "df = pd.DataFrame({'x':x , \"y\":y})\n",
+    "\n",
+    "#inspect dataframe\n",
+    "df.head()"
    ]
   },
   {
