derive coefficient value

--- a/4 - Workbook - Regression Algorithms.ipynb
+++ b/4 - Workbook - Regression Algorithms.ipynb
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
     }
    ],
    "source": [
-    "# let's tune the penalty strength of the lasso model\n",
+    "# let's tune the penalty strength of the lasso model by reducing the penalty strength,\n",
     "\n",
     "lasso2 = Lasso(random_state=1234, alpha=0.1)\n",
     "\n",
@@ -1062,17 +1062,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.69331140e-01, -8.65802515e-03, -0.00000000e+00,  0.00000000e+00,\n",
+       "        1.09980841e-03, -1.22710248e-02, -6.94515203e-03, -2.01266420e-03,\n",
+       "        2.07336496e-02, -1.24509915e-02, -1.82165991e-02,  0.00000000e+00,\n",
+       "        5.94510065e-04, -1.62810620e-03, -0.00000000e+00, -0.00000000e+00,\n",
+       "       -0.00000000e+00, -1.37869892e-02,  1.59578283e-02,  0.00000000e+00,\n",
+       "        0.00000000e+00, -1.43741491e-04, -0.00000000e+00, -0.00000000e+00,\n",
+       "       -1.15881584e-02,  1.04925755e-02, -0.00000000e+00,  1.68318275e-02,\n",
+       "       -0.00000000e+00,  0.00000000e+00, -1.36356031e-03,  1.54573812e-02,\n",
+       "       -0.00000000e+00,  2.70226392e-02,  0.00000000e+00,  0.00000000e+00,\n",
+       "       -4.81665419e-03,  4.56861180e-03,  3.34771983e-03,  1.45623891e-02,\n",
+       "       -8.71522914e-05, -3.77241227e-03, -5.05190716e-03, -8.73186890e-03,\n",
+       "       -0.00000000e+00, -3.10884391e-04, -6.29270647e-03,  1.26558367e-04,\n",
+       "       -1.69831237e-03,  1.59948887e-04,  1.65580045e-02,  1.21476827e-02,\n",
+       "        0.00000000e+00, -4.20165290e-03, -0.00000000e+00,  1.26030610e-02,\n",
+       "       -1.08176070e-02, -0.00000000e+00,  0.00000000e+00,  1.46229203e-03,\n",
+       "        0.00000000e+00, -0.00000000e+00, -9.54328280e-03, -0.00000000e+00,\n",
+       "        1.50212596e-03,  1.22083400e-02,  1.15619211e-02,  0.00000000e+00,\n",
+       "       -8.14188712e-04, -3.17373971e-02,  0.00000000e+00,  4.29797126e-05,\n",
+       "        8.76356923e-03,  9.89594325e-03,  0.00000000e+00,  0.00000000e+00,\n",
+       "        0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "       -0.00000000e+00,  0.00000000e+00,  1.13480658e-02,  1.04556226e-02,\n",
+       "       -2.84657219e-03,  1.09795231e-02, -4.09336847e-03, -1.63976743e-02,\n",
+       "       -2.19839181e-03, -0.00000000e+00, -0.00000000e+00, -0.00000000e+00,\n",
+       "       -3.08589774e-02, -1.26076710e-02, -0.00000000e+00,  3.36295249e-02,\n",
+       "        1.15147340e-03,  0.00000000e+00,  0.00000000e+00, -9.09735125e-03])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# display lasso coefficient\n",
+    "\n",
+    "lasso2.coef_"
+   ]
   },
   {
    "cell_type": "markdown",
