tune Ridge with  alpha=1000000

--- a/4 - Workbook - Regression Algorithms.ipynb
+++ b/4 - Workbook - Regression Algorithms.ipynb
@@ -3045,7 +3045,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ridge4 = Ridge()\n",
+    "\n",
+    "ridge4 = Ridge(random_state=1234, alpha=1000000)\n",
+    "\n",
+    "ridge4.fit(x_garbage, y_garbage)\n",
+    "\n",
+    "plt.scatter(df.x, df.y)\n",
+    "\n",
+    "plt.plot(df.x, ridge4.predict(x_garbage), 'k--')\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
