check coefficient of elastic net

--- a/4 - Workbook - Regression Algorithms.ipynb
+++ b/4 - Workbook - Regression Algorithms.ipynb
@@ -3150,7 +3150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3198,10 +3198,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.07419053, -0.        , -0.        , -0.        ,  0.00059248,\n",
+       "       -0.00019614, -0.00071396, -0.        ,  0.01013909, -0.        ,\n",
+       "       -0.00624574,  0.00137229,  0.        , -0.        , -0.        ,\n",
+       "        0.        , -0.        , -0.        ,  0.0038678 ,  0.        ,\n",
+       "        0.        , -0.        , -0.        ,  0.        , -0.        ,\n",
+       "        0.00705589, -0.        ,  0.00280367, -0.        , -0.        ,\n",
+       "       -0.        ,  0.        ,  0.        ,  0.00939409, -0.        ,\n",
+       "       -0.        , -0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "       -0.00458785, -0.        ,  0.        , -0.        , -0.        ,\n",
+       "        0.        , -0.        ,  0.        , -0.        ,  0.        ,\n",
+       "        0.0067004 ,  0.        , -0.        , -0.        , -0.        ,\n",
+       "        0.00292751, -0.00827389,  0.        ,  0.        ,  0.        ,\n",
+       "        0.        , -0.        , -0.00259604, -0.        ,  0.        ,\n",
+       "        0.        ,  0.        ,  0.        , -0.        , -0.01200714,\n",
+       "        0.        ,  0.002469  ,  0.        ,  0.        , -0.        ,\n",
+       "       -0.        , -0.        , -0.        ,  0.        , -0.        ,\n",
+       "       -0.        ,  0.        ,  0.00242546,  0.00174421, -0.        ,\n",
+       "        0.        , -0.00061096, -0.        , -0.        , -0.        ,\n",
+       "        0.        , -0.        , -0.00244346, -0.0047218 ,  0.        ,\n",
+       "        0.01680742,  0.        , -0.        ,  0.        , -0.        ])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elastic.coef_"
+   ]
   },
   {
    "cell_type": "markdown",
