import Tree ensembles and regularised regressor algorithms

--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -50,7 +50,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import regularised regression algorithms\n",
+    "\n",
+    "from sklearn.linear_model import Lasso, Ridge, ElasticNet\n",
+    "\n",
+    "# import Tree ensemble algorithms\n",
+    "\n",
+    "from sklearn.ensemble import GradientBoostingRegressor RandomForestRegressor"
+   ]
   },
   {
    "cell_type": "code",
