--- a/5 - Workbook - Model Training.ipynb
+++ b/5 - Workbook - Model Training.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "\n",
     "# import Tree ensemble algorithms\n",
     "\n",
-    "from sklearn.ensemble import GradientBoostingRegressor RandomForestRegressor"
+    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor"
    ]
   },
   {
